# 1.08.07 (58112) Oct 28, 2011
10/28/11 Deploying as a release candidate for review by the team.
# 1.08.06 (57793) Oct 19, 2011
> Moved "Kelvin/Celsius" option from "Options" menu into "Teacher" menu
> Made it so the selected atom/molecule changes when clicking on the image next to the radio button in the control panel
> Changed Argon color from blue-green to pink
# 1.08.05 (57713) Oct 17, 2011
10/17/11 Deploying to dev for review.
> Fixed an issue where the clock would remain paused after the reset button was pressed.  This was true on all tabs.
Made the hint for moving the finger up and down only point down when at top of range.
Made the flame and ice images transparent.
Changed the color of all border titles in the control panels to be black instead of gray.
> Added a "Teacher" menu and added an option for setting the background to be white on all tabs.
> Added an options menu and added options for selecting Celsius or Kelvin as the temperature units.
# 1.08.04 (57476) Oct 11, 2011
10/11/11 Deploying a version where the "Return Lid" feature is somewhat better behaved.
Modified the Return Lid feature to make put the remaining particles into the gaseous state regardless of their current energy.
# 1.08.03 (57473) Oct 11, 2011
10/11/11 Deploying to dev for interviews and feedback.
Added strokes (black lines) around the atoms/molecules on the control panel to make them more visible.
> Added the ability to return the lid to the container after it has been blown off.
> Added a "hint" to the finger node to make it more obvious that it can be moved.  This hint is only shown when the mouse is over the finger.
Darkened the control panels a little bit so that the recently added molecules would be a bit more visible.
> Added images of the atoms/molecules to the control panel.
> Improved the artwork used for the flame in the stove node.
Added gradient to the slider node of the track.
Modified the stove node to have black labels (more visible).
# 1.08.02 (57327) Oct 5, 2011